--- a/dathistdiff.htm
+++ b/dathistdiff.htm
@@ -143,12 +143,12 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: -4px; margin: 0px 0px 0px 4px;"> Положение &nbsp;DAT томограммы строго зафиксировано, такое при котором она была снята и &quot;железно&quot; привязана к ускорителю.<br />
-Входная DICOM томограмма, с контурами, может быть повернута в процессе оконтуривания.<br />
-В идеале, обе томограммы должны быть одинаковы, как пространственно, так и по значениям величин.<br />
+<p style="text-indent: -4px; margin: 0px 0px 0px 4px;"> Положение &nbsp;DAT томограммы строго зафиксировано, такое при котором она была снята и &quot;железно&quot; привязана к ускорителю. </p>
+<p style="text-indent: -4px; margin: 0px 0px 0px 4px;"> Входная DICOM томограмма с контурами может быть повернута <a href="hm_contour.htm" class="topiclink">в процессе оконтуривания</a>.<br />
+В идеале, обе томограммы должны совпадать, как пространственно, так и по значениям величин.<br />
 &nbsp;</p>
 <p>Для того чтобы совместить DICOM-DAT томограммы необходимо вращать DICOM томограмму</p>
-<p>с помощью кнопок поворотов на панели инструментов.<br />
+<p>с помощью кнопок поворотов <a href="dat2fmmribbon.htm" class="topiclink"> на панели инструментов</a>.<br />
 &nbsp;</p>
 <p>&nbsp;</p>
 <div style="text-indent: 97px;"><table style="border-spacing:0;border:none;width:809px"><tr><td><a href="datdiff1.png"><img id="TOGGLE0186A1" class="image-toggle" src="datdiff1_zoom60.png" style="border:none" alt="Панель сравнения и наложения томограмм" title="Панель сравнения и наложения томограмм" /></a></td></tr><tr><td style="text-align:center;padding:0px 0px 0px 0px"><span class="f_ImageCaption">Панель сравнения и наложения томограмм</span></td></tr></table></div>
