--- a/datinfo.htm
+++ b/datinfo.htm
@@ -153,13 +153,11 @@ span.f_Heading1 { color: black; }
 </table>
 </div>
 <p class="p_BodyText" style="text-align: center;"><span class="f_BodyText">&nbsp;</span></p>
-<p class="p_BodyText" style="text-indent: 12px;"><span class="f_BodyText">При <a href="dicom2fmm.htm" class="topiclink">создании FMM файла на основе DICOM </a>томограммы</span><span class="f_BodyText"> </span><span class="f_BodyText">и</span><span class="f_Heading2_atoc_" style="font-size: 16px; color: #000000;">нформация о входных-выходных данных</span><span class="f_BodyText"> </span><span class="f_BodyText">доступна </span></p>
-<p class="p_BodyText" style="text-indent: 12px;"><span class="f_BodyText">на панели инструментов</span></p>
+<p class="p_BodyText" style="text-indent: 12px;"><span class="f_BodyText">При <a href="dicom2fmm.htm" class="topiclink">создании FMM файла на основе DICOM </a>томограммы</span><span class="f_BodyText"> </span><span class="f_BodyText">и</span><span class="f_Heading2_atoc_" style="font-size: 16px; color: #000000;">нформация о входных-выходных данных</span><span class="f_BodyText"> </span><span class="f_BodyText">доступна на панели инструментов.</span></p>
 <p class="p_BodyText"><span class="f_BodyText">&nbsp;</span></p>
 <p class="p_BodyText" style="text-align: center;"><img src="info1.png" width="147" height="93" alt="Info1" style="border:none" /></p>
 <p class="p_BodyText"><span class="f_BodyText">&nbsp;</span></p>
-<p class="p_BodyText" style="text-indent: 11px;"><span class="f_BodyText">При </span><a href="dat2fmm.htm" class="topiclink">создании FMM файла на основе DAT</a> файла<span class="f_BodyText"> </span><span class="f_BodyText">и</span><span class="f_Heading2_atoc_" style="font-size: 16px; color: #000000;">нформация о входных-выходных данных</span><span class="f_BodyText"> доступна </span></p>
-<p class="p_BodyText" style="text-indent: 11px;"><span class="f_BodyText">на вкладке &quot;Информация&quot;</span></p>
+<p class="p_BodyText" style="text-indent: 11px;"><span class="f_BodyText">При </span><a href="dat2fmm.htm" class="topiclink">создании FMM файла на основе DAT</a> файла<span class="f_BodyText"> </span><span class="f_BodyText">и</span><span class="f_Heading2_atoc_" style="font-size: 16px; color: #000000;">нформация о входных-выходных данных</span><span class="f_BodyText"> доступна на вкладке &quot;Информация&quot;.</span></p>
 <p class="p_BodyText"><span class="f_BodyText">&nbsp;</span></p>
 <p class="p_BodyText" style="text-align: center;"><img src="datinfotab.png" width="592" height="260" alt="DatInfoTab" style="border:none" /></p>
 <p class="p_BodyText" style="text-align: center;"><span class="f_BodyText">&nbsp;</span></p>
