--- a/dicom_rt.htm
+++ b/dicom_rt.htm
@@ -143,14 +143,19 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p>Все современные томографы производят серию файлов в специальном формате<span style="font-weight: bold; color: #000080;"> DICOM</span></p>
+<p style="text-indent: 10px;">Все современные томографы производят серию файлов в специальном формате<span style="font-weight: bold; color: #000080;"> DICOM.</span></p>
 <p><span style="font-weight: bold; color: #000080;">DICOM (Digital Imaging and Communications in Medicine) </span>- стандарт обработки, хранения, печати и передачи медицинских изображений.</p>
 <p>&nbsp;</p>
-<p><span style="font-weight: bold; color: #000080;">DICOM </span>содержит информацию о пациенте, исследовании, а также информацию для отрисовки изображения. Фактически каждый файл представляет срез произвольной части тела, в какой-либо плоскости, чаще всего в горизонтальной. Каждый такой DICOM-файл содержит информацию о &quot;плотности&quot; тканей в конкретном срезе. На самом деле Компьютерная Томография ( <span style="font-weight: bold; color: #000080;">КТ</span>) сохраняет в файлах рентгеновскую плотность, которая зависит от физической плотности тканей. Кости имеют большую рентгеновскую плотность, кровь меньшую и т.д.</p>
+<p><span style="font-weight: bold; color: #000080;">DICOM </span>содержит информацию о пациенте, исследовании, а также информацию для отрисовки изображения. </p>
+<p>Фактически каждый файл представляет срез произвольной части тела, в какой-либо плоскости, </p>
+<p>чаще всего в горизонтальной. Каждый такой DICOM-файл содержит информацию о &quot;плотности&quot; тканей в конкретном срезе. </p>
+<p>На самом деле, <span style="font-weight: bold;">К</span>омпьютерная <span style="font-weight: bold;">Т</span>омография ( <span style="font-weight: bold; color: #000080;">КТ</span>) сохраняет в файлах рентгеновскую плотность, </p>
+<p>которая зависит от физической плотности тканей. Кости имеют большую рентгеновскую плотность, кровь меньшую и т.д.</p>
 <p>&nbsp;</p>
 <p>Для измерения рентгеновской плотности используется <span style="font-weight: bold; color: #000080;">Шкала Хаунсфилда</span>.</p>
 <p>&nbsp;</p>
-<p>Шкала единиц Хаунсфилда (англ.<span style="font-weight: bold; color: #000080;"> HU </span>или<span style="font-weight: bold; color: #000080;"> CT</span>) — шкала линейного ослабления рентгеновского излучения по отношению к дистиллированной воде, рентгеновская плотность которой была принята за 0 <span style="font-weight: bold; color: #000080;">HU</span> (при стандартных давлении и температуре). </p>
+<p>Шкала единиц Хаунсфилда (англ.<span style="font-weight: bold; color: #000080;"> HU </span>или<span style="font-weight: bold; color: #000080;"> CT</span>) — шкала линейного ослабления рентгеновского излучения по отношению к дистиллированной воде, рентгеновская плотность которой была принята за 0 <span style="font-weight: bold; color: #000080;">HU</span> (при стандартных давлении и температуре).</p>
+<p>&nbsp;</p>
 <p>Для материала X с линейным коэффициентом ослабления величина <span style="font-weight: bold; color: #000080;">HU</span> определяется по формуле </p>
 <p>&nbsp;</p>
 <p style="text-indent: 95px;"><img src="hulong.png" width="710" height="82" alt="HUlong" style="border:none" /></p>
