--- a/error.htm
+++ b/error.htm
@@ -143,8 +143,8 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 20px;">В случае возникновения неисправимой ошибки/исключения появится окно сообщения об ошибке,</p>
-<p style="text-indent: 2px;">которое потом дублируется &nbsp;на статусной панели.</p>
+<p style="text-indent: 9px;">В случае возникновения неисправимой ошибки/исключения появится окно сообщения об ошибке,</p>
+<p style="text-indent: 9px;">которое потом дублируется &nbsp;на статусной панели.</p>
 <p style="text-indent: 2px;">&nbsp;</p>
 <p style="text-indent: 2px;">&nbsp;</p>
 <div style="text-indent: 79px; margin: 0px 0px 0px 127px;"><div style="width:411px;padding:0px"><img src="error2.png" width="411" height="123" style="border:none" alt="Окно сообщения о неисправимой ошибке" title="Окно сообщения о неисправимой ошибке" /><p style="text-align:center"><span class="f_ImageCaption">Окно сообщения о неисправимой ошибке<br/>
@@ -153,8 +153,7 @@ span.f_Heading1 { color: black; }
 <div style="text-indent: 132px;"><div style="width:563px;padding:0px"><img src="error1.png" width="563" height="161" style="border:none" alt="Сообщения о неисправимой ошибке" title="Сообщения о неисправимой ошибке" /><p style="text-align:center"><span class="f_ImageCaption">Сообщения о неисправимой ошибке<br/>
 </span></p></div></div>
 <p style="text-indent: 2px;">&nbsp;</p>
-<p> &nbsp; По поводу исправления ошибок, вопросов, пожеланий, можно связаться с разработчиком </p>
-<p>по электронному адресу: <span style="font-weight: bold;">valeriy.onuchin@yandex.ru </span></p>
+<p> &nbsp; По поводу исправления ошибок, вопросов, пожеланий, можно связаться с разработчиком по адресу: <span style="font-weight: bold;">valeriy.onuchin@yandex.ru </span></p>
 
 <!--ZOOMSTOP-->
 </div></div>
