--- a/hm_fmmdat.htm
+++ b/hm_fmmdat.htm
@@ -145,8 +145,7 @@ span.f_Heading1 { color: black; }
 <!--ZOOMRESTART-->
 <p style="text-indent: 12px;">Просмотрщик томограмм позволяет осуществлять синхронную навигацию по слоям DICOM или DAT томограмм. </p>
 <p style="text-indent: 2px;">Это можно делать либо с помощью ползунка, либо с помощью колеса прокрутки мышки. </p>
-<p>Он также содержит метки указывающие <a href="orient.htm" class="topiclink">пространственную ориентацию</a> пациента, </p>
-<p>направление пучка и ортогональной секущей плоскости.</p>
+<p>Он также содержит индикаторы указывающие <a href="orient.htm" class="topiclink">пространственную ориентацию</a> пациента, направление пучка и ортогональной секущей плоскости.</p>
 <p>&nbsp;</p>
 <p style="text-align: center;"><img src="fmmdat1.png" width="742" height="860" alt="FmmDat1" style="border:none" /></p>
 
