--- a/hm_mpr.htm
+++ b/hm_mpr.htm
@@ -146,8 +146,7 @@ span.f_Heading1 { color: black; }
 <p> &nbsp; Функция <span style="font-weight: bold;">Мультипланарная реконструкции (МПР)</span> позволяет пользователям создавать изображения </p>
 <p>с дополнительных точек зрения, используя стек исходных изображений в одной плоскости. </p>
 <p>При этом создаётся трехмерный объем изображений, а затем он проецируется на другие виды. </p>
-<p>Например, при наличии только одной <a href="planes.htm" class="topiclink">аксиальной</a> серии плоскостей могут быть сгенерированы </p>
-<p>как <a href="planes.htm" class="topiclink">сагиттальные</a>, так и <a href="planes.htm" class="topiclink">корональные</a> серии плоскостей.<br />
+<p>Например, при наличии только одной <a href="planes.htm" class="topiclink">аксиальной</a> серии плоскостей могут быть сгенерированы как <a href="planes.htm" class="topiclink">сагиттальные</a>, так и <a href="planes.htm" class="topiclink">корональные</a> серии плоскостей.<br />
 &nbsp;</p>
 
 <!--ZOOMSTOP-->
