--- a/installprogram.htm
+++ b/installprogram.htm
@@ -143,21 +143,19 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p>Программа поставляется с двумя ZIP файлами:</p>
+<p>Программа поставляется с двумя установочными &nbsp;файлами:</p>
 <p>&nbsp;</p>
-<p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span><span style="font-weight: bold; color: #000080;">dicom2fmm.32bit.zip</span> (для 32-битной системы)</p><p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span><span style="font-weight: bold; color: #000080;">dicom2fmm.64bit.zip</span> (для 64-битной системы)</p><p>&nbsp;</p>
+<p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span><span style="font-weight: bold; color: #000080;"><a href="dicom2fmm.x32.msi" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="dicom2fmm.x32.msi">dicom2fmm.x32.msi</a></span> (для 32-битной системы)</p><p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span><span style="font-weight: bold; color: #000080;"><a href="dicom2fmm.x64.msi" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="dicom2fmm.x64.msi">dicom2fmm.x64.msi</a></span> (для 64-битной системы)</p><p>&nbsp;</p>
 <p>а, также с двумя с Microsoft Access драйверами:</p>
 <p>&nbsp;</p>
-<p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span><span style="font-weight: bold; color: #000080;">
-<a href="AccessDatabaseEngine.exe">AccessDatabaseEngine.exe</a> </span><span style="color: #0000ff;"> </span>(32-разрядный) </p><p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span><span style="font-weight: bold; color: #000080;">
-<a href="AccessDatabaseEngine_X64.exe">AccessDatabaseEngine_X64.exe</a></span><span style="color: #0000ff;"> </span> (64-разрядный). </p><p><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
-<p>и средой выполнения .NET Framework - <span style="font-weight: bold; color: #000080;"><a href="dotNetFx40_Client_x86_x64.exe">dotNetFx40_Client_x86_x64.exe</a></span></p>
+<p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span><span style="font-weight: bold; color: #000080;"><a href="AccessDatabaseEngine.exe" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="AccessDatabaseEngine.exe">AccessDatabaseEngine.exe</a></span><span style="color: #0000ff;"> </span>(32-разрядный) </p><p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span><span style="font-weight: bold; color: #000080;"><a href="AccessDatabaseEngine_X64.exe" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="AccessDatabaseEngine_X64.exe">AccessDatabaseEngine_X64.exe</a></span><span style="color: #0000ff;"> </span> (64-разрядный). </p><p><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
+<p>и средой выполнения .NET Framework - <span style="font-weight: bold;"><a href="dotNetFx40_Client_x86_x64.exe" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="dotNetFx40_Client_x86_x64.exe">dotNetFx40_Client_x86_x64.exe</a></span></p>
 <p><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
-<p><span style="font-family: 'Arial CYR';">В случае отсутствия в системе </span>Microsoft Access драйверов или среды выполнения .NET Framework, <span style="font-family: 'Arial CYR';">их необходимо установить перед установкой программы.</span></p>
+<p><span style="font-family: 'Arial CYR';">В случае отсутствия в системе </span>Microsoft Access драйверов или среды выполнения .NET Framework, </p>
+<p><span style="font-family: 'Arial CYR';">их необходимо установить перед установкой программы.</span></p>
 <p style="text-indent: 1px;"><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
-<p>Для установки программы достаточно распаковать содержимое соответствующего ZIP файла в &quot;клиентскую&quot; папку.</p>
-<p>&nbsp;</p>
-<p>На пример, <span style="font-weight: bold; color: #000080;">D:\Clients\dicom2fmm\</span></p>
+<p>Для установки программы достаточно распаковать содержимое соответствующего ZIP файла </p>
+<p>в &quot;клиентскую&quot; папку. На пример, <span style="font-weight: bold; color: #000080;">D:\Clients\dicom2fmm\</span></p>
 <p>&nbsp;</p>
 
 <!--ZOOMSTOP-->
