--- a/planstart.htm
+++ b/planstart.htm
@@ -144,22 +144,25 @@ span.f_Heading1 { color: black; }
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
 <p class="p_BodyText" style="text-indent: 17px;">Перед тем, как будет осуществлен запуск программы, необходимо проверить подключена ли данная рабочая станция к сети и является ли сервер, на котором находится база данных, включенным. </p>
-<p style="text-indent: 17px;">Далее следует запустить программу <span style="font-weight: bold; color: #000080;">«Рабочее место медицинского физика»</span>: наведите курсор мыши на значок (Рис.1) на рабочем столе и дважды щелкните по нему левой кнопкой мыши.</p>
+<p style="text-indent: 17px;">Далее следует запустить программу <span style="font-weight: bold; color: #000080;">«Рабочее место медицинского физика»</span>: наведите курсор мыши на значок (Рис.1) </p>
+<p style="text-indent: 17px;">на рабочем столе и дважды щелкните по нему левой кнопкой мыши.</p>
 <p style="text-align: center; text-indent: 17px;"><img src="hm_clip0003_zoom73.png" width="69" height="59" alt="HM_clip0003" style="border:none" /></p>
 <p style="text-align: center; text-indent: 17px;"><span style="font-size: 19px;">Plan</span></p>
 <p style="text-align: center; text-indent: 17px;"><span style="font-family: 'times new roman';">Рис.1. Значок на рабочем столе</span></p>
 <p style="text-indent: 17px;">&nbsp;</p>
 <p style="text-indent: 17px;">&nbsp;</p>
-<p style="text-indent: 17px;">После выбора пациента нажмите кнопку <span style="font-weight: bold; color: #000080;">Томограммы. </span>При нажатии кнопки <img src="hm_clip0004.png" width="126" height="44" alt="HM_clip0004" style="border:none" /> откроется список томограмм для выбранного пациента.</p>
+<p style="text-indent: 17px;">После выбора пациента нажмите кнопку <span style="font-weight: bold; color: #000080;">Томограммы. </span></p>
+<p style="text-indent: 17px;">При нажатии кнопки <img src="hm_clip0004.png" width="126" height="44" alt="HM_clip0004" style="border:none" /> откроется список томограмм для выбранного пациента.</p>
 <p style="text-indent: 47px;"><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
 <p style="text-indent: 47px;"><img src="hm_clip0005.png" width="763" height="115" alt="HM_clip0005" style="border:none" /></p>
 <p style="text-indent: 17px;"><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
 <p style="text-indent: 17px;">В списке отразятся все томограммы для выбранного пациента. </p>
-<p style="text-indent: 19px;">Томограммы, выполненные для выбранного пациента в положении &quot;сидя&quot; с помощью встроенного в комплекс &quot;Прометеус&quot; томографа, имеют расширение .dat. <br />
+<p>Томограммы, выполненные для выбранного пациента в положении &quot;сидя&quot; с помощью встроенного в комплекс &quot;Прометеус&quot; томографа, </p>
+<p>имеют расширение .dat. <br />
 &nbsp;<br />
 Порядок работы с ними описан в разделе &nbsp;&quot;<a href="dat2fmm.htm" class="topiclink">Создание FMM на основе DAT файла&quot;</a>.</p>
 <p style="text-indent: 17px;"><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
-<p style="text-indent: 17px;">Сторонняя томограмма (для облучения в положении &quot;лежа&quot;) обычно имеет смысловое название. <br />
+<p>Сторонняя томограмма (для облучения в положении &quot;лежа&quot;) обычно имеет смысловое название. <br />
 Порядок работы с ней описан в разделе &quot;<a href="dicom2fmm.htm" class="topiclink">Создание FMM файла на основе DICOM томограммы&quot;</a>.</p>
 <p style="text-indent: 17px;"><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
 <p style="text-indent: 17px;"><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
