--- a/print.htm
+++ b/print.htm
@@ -146,6 +146,7 @@ span.f_Heading1 { color: black; }
 <p style="text-indent: 14px;">Программа предоставляет инструмент поддержки печати, генерации отчётов и экспорта изображений. Он включает в себя предварительный просмотр печати с функциями масштабирования, поворотов, изменения размеров изображения и другими. </p>
 <p>&nbsp;</p>
 <p style="text-indent: 12px;">Все эти функции представлены на панели инструментов.</p>
+<p style="text-indent: 12px;">&nbsp;</p>
 <p><img src="printpanel1.png" width="1073" height="142" alt="PrintPanel1" style="border:none" /></p>
 <p>&nbsp;</p>
 <p style="text-indent: 14px;">Поддерживаются следующие форматы документов и изображений:</p>
