--- a/standalonestart.htm
+++ b/standalonestart.htm
@@ -146,8 +146,11 @@ span.f_Heading1 { color: black; }
 <p class="p_BodyText" style="text-indent: 214px;"><img src="protom.png" width="91" height="98" alt="Protom" style="border:none" /></p>
 <p style="text-indent: 52px;"><span style="font-size: 13px;">Ярлык на рабочем столе для запуска </span><span style="font-size: 13px; font-weight: bold;">dicom2fmm.exe</span><span style="font-size: 13px;"> в автономном режиме.</span></p>
 <p style="text-indent: 314px;"><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
-<p style="text-indent: 13px;"> Чтобы запустить программу с помощью ярлыка на рабочем столе, дважды кликните мышью по ярлыку. </p>
-<p style="text-indent: 13px;">После запуска появится с<span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">тартовая страница, которая служит для выбора директории с оконтуренной томограммой в формате DICOM-RT.</span></p>
+<p style="text-indent: 13px;">Запуск программы в автономном режиме с помощью ярлыка используется, как правило, для тестирования.</p>
+<p style="text-indent: 13px;">Чтобы запустить программу с помощью ярлыка на рабочем столе, дважды кликните мышью по ярлыку. </p>
+<p style="text-indent: 13px;"><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
+<p style="text-indent: 13px;">После запуска появится с<span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">тартовая страница, которая служит для выбора директории с оконтуренной </span></p>
+<p style="text-indent: 13px;"><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">томограммой в формате DICOM-RT.</span></p>
 <p style="text-align: justify;"><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
 <div class="p_BodyText" style="text-indent: -4px; margin: 0px 0px 10px 63px;"><table style="border-spacing:0;border:none;width:570px"><tr><td><a href="standalone1.png"><img id="TOGGLE0186A1" class="image-toggle" src="standalone1.png" style="border:none" alt="Стартовое окно программы" title="Стартовое окно программы" /></a></td></tr><tr><td style="text-align:center;padding:0px 0px 0px 0px"><span class="f_ImageCaption">Стартовое окно программы</span></td></tr></table></div>
 <p style="text-align: justify;"><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;"> &nbsp; DICOM директорию можно выбрать несколькими способами:</span></p>
@@ -166,7 +169,9 @@ span.f_Heading1 { color: black; }
 Выбор предписания и томограммы</span></td></tr></table></div>
 <p class="p_BodyText" style="text-indent: 171px; margin: 0px 0px 10px 63px;"><span class="f_BodyText">&nbsp;</span></p>
 <div class="p_BodyText" style="text-indent: -4px; margin: 0px 0px 10px 63px;"><table style="border-spacing:0;border:none;width:658px"><tr><td><a href="standalone5.png"><img id="TOGGLE0186A4" class="image-toggle" src="standalone5.png" style="border:none" alt="Выбор DICOM директории" title="Выбор DICOM директории" /></a></td></tr><tr><td style="text-align:center;padding:0px 0px 0px 0px"><span class="f_ImageCaption">Выбор &nbsp;DICOM директории</span></td></tr></table></div>
+<p class="p_BodyText" style="text-indent: 158px; margin: 0px 0px 10px 63px;"><span class="f_BodyText">&nbsp;</span></p>
 <div class="p_BodyText" style="text-indent: -4px; margin: 0px 0px 10px 63px;"><table style="border-spacing:0;border:none;width:713px"><tr><td><a href="standalone6.png"><img id="TOGGLE0186A5" class="image-toggle" src="standalone6.png" style="border:none" alt="Начало чтения директории. Основное окно программы." title="Начало чтения директории. Основное окно программы." /></a></td></tr><tr><td style="text-align:center;padding:0px 0px 0px 0px"><span class="f_ImageCaption">Начало чтения DICOM директории. Основное окно программы.</span></td></tr></table></div>
+<p class="p_BodyText" style="text-indent: 59px; margin: 0px 0px 10px 63px;"><span class="f_BodyText">&nbsp;</span></p>
 <p class="p_BodyText" style="text-indent: -4px; margin: 0px 0px 10px 63px;"><a href="dat2fmm2.png"><img id="TOGGLE0186A6" class="image-toggle" src="dat2fmm2.png" alt="Основное окно программы" title="Основное окно программы" style="border:none" /></a></p>
 
 <!--ZOOMSTOP-->
