--- a/datfile.htm
+++ b/datfile.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p>Особенностью комплекса протонной терапии<span style="font-weight: bold; color: #000080;"> «ПРОМЕТЕУС»</span> является наличие встроенного рентгеновского (КТ) томографа. &nbsp;Встроенный томограф описан в документе <span style="font-weight: bold; color: #000080;">Комплекс программ «Томограф».</span></p>
+<p style="text-indent: 12px;">Особенностью комплекса протонной терапии<span style="font-weight: bold; color: #000080;"> «ПРОМЕТЕУС»</span> является наличие встроенного рентгеновского (КТ) томографа. &nbsp;Встроенный томограф описан в документе <span style="font-weight: bold; color: #000080;">Комплекс программ «Томограф».</span></p>
 <p><span style="font-weight: bold; color: #000080;">&nbsp;</span></p>
 <p>&nbsp;</p>
 <p style="text-align: center;"><img src="chair530.jpg" width="530" height="520" alt="chair530" style="border:none" /></p>
@@ -153,18 +153,15 @@ span.f_Heading1 { color: black; }
 <p style="text-align: center;">&nbsp;<br />
 <img src="cbct2.png" width="500" height="409" alt="CBCT2" style="border:none" /><br />
 &nbsp;</p>
-<p> &nbsp; &nbsp;Точечный источник, закреплённый вдоль оси ускорителя, &nbsp;излучает конус рентгеновских лучей, который после прохождения тела пациента </p>
-<p>детектируется пиксельным детектором. Для снятия ракурсов под разными углами пациент вращается в автоматизированном кресле.</p>
+<p> &nbsp; &nbsp;Точечный источник, закреплённый вдоль оси ускорителя, &nbsp;излучает конус рентгеновских лучей, который после прохождения тела пациента детектируется пиксельным детектором.  </p>
+<p>Для снятия ракурсов под разными углами пациент вращается в автоматизированном кресле.</p>
 <p>&nbsp;</p>
-<p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span>Томограф откалиброван на протонном пучке так, что его значения &nbsp;выражены в <a href="spr_units.htm" class="topiclink">относительных &nbsp;коэффициентах торможения протонов</a> <br />
-по отношению в воде. Это позволяет вычислять глубину проникновения протона заданной энергии с высокой точностью. </p><p>&nbsp;</p>
+<p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span>Томограф откалиброван на протонном пучке так, что его значения &nbsp;выражены в <a href="spr_units.htm" class="topiclink">относительных &nbsp;коэффициентах торможения протонов</a> &nbsp;по отношению в воде. Это позволяет вычислять глубину проникновения протона заданной энергии с высокой точностью. </p><p>&nbsp;</p>
 <p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span>Он обеспечивает геометрическую привязку томограммы пациента к ускорителю, направлению протонного пучка. <br />
 Это обеспечивает быстрое и точное позиционирование пациента во время сеанса терапии.</p><p>&nbsp;</p>
 <p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span>&quot;Физическая&quot; привязка томограммы и положения пациента к конкретному ускорителю и его физически параметрам, <br />
-обеспечивает высоко-конформное обучение опухоли.</p><p>&nbsp;<br />
-На выходе программа  <span style="font-weight: bold; color: #000080;">«Томограф»</span> выдает томограмму (трёхмерную матрицу величин), которая сохраняется в виде <span style="font-weight: bold; color: #000080;">DAT</span><span style="font-weight: bold;"> </span>файла. </p>
-<p>После этого томограмма со встроенного томографа преобразуется в формат DICOM программой <span style="font-weight: bold;">db2dcm.exe</span> и </p>
-<p>поступает на вход <a href="hm_contour.htm" class="topiclink">программы оконуривания</a>.</p>
+обеспечивает высоко-конформное обучение опухоли.</p><p style="text-indent: 7px; margin: 0px 0px 0px 13px;">&nbsp;<br />
+На выходе программа  <span style="font-weight: bold; color: #000080;">«Томограф»</span> выдает томограмму (трёхмерную матрицу величин), которая сохраняется в виде <span style="font-weight: bold; color: #000080;">DAT</span><span style="font-weight: bold;"> </span>файла. &nbsp;После этого томограмма со встроенного томографа преобразуется в формат DICOM программой <span style="font-weight: bold;">db2dcm.exe</span> и &nbsp;поступает на вход <a href="hm_contour.htm" class="topiclink">программы оконуривания</a>.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
