--- a/linear.htm
+++ b/linear.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p>Linear преобразование имеет линейную зависимость<span class="f_BodyText"><a href="spr_units.htm" class="topiclink"> Stopping Power Ratio</a> от  <a href="dicom_rt.htm" class="topiclink">единиц Хаунсфилда</a> (</span><span class="f_BodyText" style="font-weight: bold;">HU</span><span class="f_BodyText">) при которой, согласно формуле:</span></p>
+<p style="text-indent: 10px;">Linear преобразование имеет линейную зависимость<span class="f_BodyText"><a href="spr_units.htm" class="topiclink"> Stopping Power Ratio</a> от  <a href="dicom_rt.htm" class="topiclink">единиц Хаунсфилда</a> (</span><span class="f_BodyText" style="font-weight: bold;">HU</span><span class="f_BodyText">) при которой, согласно формуле:</span></p>
 <p>&nbsp;</p>
 <p style="text-indent: 25px;"><img src="hulong.png" width="710" height="82" alt="HUlong" style="border:none" /></p>
 <p style="text-indent: 25px;">&nbsp;</p>
