--- a/voxels.htm
+++ b/voxels.htm
@@ -145,6 +145,7 @@ span.f_Heading1 { color: black; }
 <!--ZOOMRESTART-->
 <p style="text-indent: 12px;">Трёхмерная ячейка томограммы называется воксель.</p>
 <p style="text-indent: 11px;">В программе используется следующая схема нумерации вокселей в каждой из анатомических плоскостей.</p>
+<p><span class="f_ImageCaption"> </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;"> Стрелками показаны нумерации вокселей в соответствующей плоскости.</span></p>
 <p style="text-indent: -30px; margin: 0px 0px 0px 30px;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center; text-indent: -30px; margin: 0px 0px 0px 30px;"><img src="planes_num.png" width="512" height="497" alt="planes_num" style="border:none" /></p>
@@ -153,7 +154,7 @@ span.f_Heading1 { color: black; }
 <p style="text-align: center; text-indent: -30px; margin: 0px 0px 0px 30px;"><span class="f_ImageCaption">красным — корональная плоскость, </span></p>
 <p style="text-align: center; text-indent: -30px; margin: 0px 0px 0px 30px;"><span class="f_ImageCaption">зелёным — сагиттальная плоскость.</span></p>
 <p style="text-align: center; text-indent: 23px;">&nbsp;</p>
-<p><span class="f_ImageCaption"> </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;"> Стрелками показаны нумерации вокселей в соответствующей плоскости.</span></p>
+<p>&nbsp;</p>
 <p>&nbsp;<br />
 &nbsp;</p>
 
